added message board file

--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -9,6 +9,12 @@
         <li class="nav-item">
             <a class="nav-link" href="/logout">Log out</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/myWorlds">My Worlds</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/messageBoard">Messages</a> <!-- I should find out how to make this signal if there are new messages -->
+        </li>
       </ul>
     </div>
 
@@ -16,7 +22,7 @@
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
               <a class="nav-link" href="#">
-              <!-- I have to do more set up for this I think -->
+              <!-- I have to do more set up for this to work -->
                     {{ email }} 
               </a>
           </li>
