--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -22,8 +22,7 @@
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
               <a class="nav-link" href="#">
-              <!-- I have to do more set up for this to work -->
-                    {{ email }} 
+                    {{ username }} 
               </a>
           </li>
       </ul>
