--- a/ProjectSourceCode/views/pages/register.hbs
+++ b/ProjectSourceCode/views/pages/register.hbs
@@ -10,3 +10,7 @@
     <p>Already have an account? <a href="/login">Login</a></p>
     </form>
 </div>
+
+<div class="popup" onclick="myFunction()">Click me!
+  <span class="popuptext" id="myPopup">Popup text...</span>
+</div>
