--- a/ProjectSourceCode/views/pages/users.hbs
+++ b/ProjectSourceCode/views/pages/users.hbs
@@ -1,5 +1,5 @@
 <ul>
     {{#each users}}
-    <li><a href="/messages/{{this.id}}">{{this.username}}</a></li>
+    <li><a href="/messages/{{username}}">{{username}}</a></li>
     {{/each}}
 </ul>
