added message link to navbar

--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/myWorlds">My Worlds</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/messageBoard">Messages</a> <!-- I should find out how to make this signal if there are new messages -->
+            <a class="nav-link" href="/users">Messages</a> <!-- I should find out how to make this signal if there are new messages -->
         </li>
       </ul>
     </div>
