--- a/ProjectSourceCode/views/pages/login.hbs
+++ b/ProjectSourceCode/views/pages/login.hbs
@@ -1,13 +1,15 @@
 {{> message}}
 <div class="container"></div>
-    <form action="/login" method="POST">
-    <div class="form-group">
+<form action="/login" method="POST">
+    <div class="form-group px-5 py-3">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" name="username">
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password" name="password">
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-    <p>Don't have an account? <a href="/register">Register</a></p>
-    </form>
+    <div class="px-5">
+        <button type="submit" class="btn btn-primary">Login</button>
+        <p>Don't have an account? <a href="/register">Register</a></p>
+    </div>
+</form>
 </div>
