--- a/ProjectSourceCode/views/pages/register.hbs
+++ b/ProjectSourceCode/views/pages/register.hbs
@@ -1,12 +1,15 @@
 <div class="container"></div>
-    <form action="/register" method="POST">
-    <div class="form-group">
+<form action="/register" method="POST">
+    <div class="form-group px-5 py-3">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" name="username">
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password" name="password">
     </div>
-    <button type="submit" class="btn btn-primary">Register</button>
-    <p>Already have an account? <a href="/login">Login</a></p>
-    </form>
+
+    <div class="px-5">
+        <button type="submit" class="btn btn-primary">Register</button>
+        <p>Already have an account? <a href="/login">Login</a></p>
+    </div>
+</form>
 </div>
