--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -1,31 +1,88 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <a class="navbar-brand" href="/"></a>
-      <ul class="navbar-nav mr-auto">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/logout">Log out</a>
+          <a class="nav-link" href="/myWorlds">My Worlds</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/myWorlds">My Worlds</a>
+          <a class="nav-link" href="/messageBoard">Messages</a>
+          <!-- I should find out how to make this signal if there are new messages -->
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/messageBoard">Messages</a> <!-- I should find out how to make this signal if there are new messages -->
+          <a class="nav-link" href="#">Random</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Log Out</a>
         </li>
       </ul>
+
+      {{#if username}}
+      {{!-- Navbar for logged in user --}}
+      <ul class="navbar-nav">
+        <li class="nav-item pe-3">
+          <form class="d-flex" role="search">
+            <button class="btn btn-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+              </svg></button>
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+          </form>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="#">
+            <img src="..." alt="PFP" style="width:30px;" class="rounded-pill">
+          </a>
+        </li>
+        <li class="nav-item">
+          <div class="dropstart">
+            <button class="btn btn-dark dropdown-toggle rounded-circle" type="button" data-bs-toggle="dropdown"
+              aria-expanded="false"></button>
+            <ul class="dropdown-menu dropdown-menu-dark">
+              <li><a class="dropdown-item" href="/logout">Log Out</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+      {{else}}
+      {{!-- Navbar for logged out user --}}
+      <ul class="navbar-nav">
+        <li class="nav-item pe-3">
+          <form class="d-flex" role="search">
+            <button class="btn btn-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+              </svg></button>
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+          </form>
+        </li>
+        <li class="nav-item">
+          <a href="/">
+            <button type="button" class="btn btn-secondary">Log In</button>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="/register" class="ps-2">
+            <button type="button" class="btn btn-secondary">Sign Up</button>
+          </a>
+        </li>
+      </ul>
+      {{/if}}
     </div>
 
     <div class="navbar-collapse collapse order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-              <a class="nav-link" href="#">
-              <!-- I have to do more set up for this to work -->
-                    {{ email }} 
-              </a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <!-- I have to do more set up for this to work -->
+            {{ email }}
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
