--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -13,14 +13,11 @@
           <!-- I should find out how to make this signal if there are new messages -->
         </li>
         <li class="nav-item">
-<<<<<<< HEAD
-          <a class="nav-link" href="#">Random</a>
+          <a class="nav-link" href="/users">Messages</a>
+          <!-- I should find out how to make this signal if there are new messages -->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Log Out</a>
-=======
-            <a class="nav-link" href="/users">Messages</a> <!-- I should find out how to make this signal if there are new messages -->
->>>>>>> d1834b32507ced55dffc0352759cd51bb994db77
+          <a class="nav-link" href="#">Random</a>
         </li>
       </ul>
 
@@ -29,8 +26,8 @@
       <ul class="navbar-nav">
         <li class="nav-item pe-3">
           <form class="d-flex" role="search">
-            <button class="btn btn-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <button class="btn btn-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                 <path
                   d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
               </svg></button>
@@ -57,8 +54,8 @@
       <ul class="navbar-nav">
         <li class="nav-item pe-3">
           <form class="d-flex" role="search">
-            <button class="btn btn-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <button class="btn btn-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                 <path
                   d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
               </svg></button>
