some minor fixes

--- a/ProjectSourceCode/views/pages/messageBoard.hbs
+++ b/ProjectSourceCode/views/pages/messageBoard.hbs
@@ -1,2 +1,4 @@
-<!-- what you send will be green what you recive will be blue-->
-
+{{> head}}
+{{> nav}}
+<!--someone else did this thanks to a miscomunication so I messed up-->
+{{> footer}}
