--- a/ProjectSourceCode/views/pages/register.hbs
+++ b/ProjectSourceCode/views/pages/register.hbs
@@ -11,6 +11,18 @@
     </form>
 </div>
 
-<div class="popup" onclick="myFunction()">Click me!
+    <button class="popup" onclick="PopUp()">Click me!
   <span class="popuptext" id="myPopup">Popup text...</span>
-</div>
+</button>
+{{> footer}}
+
+<!-- office hour questions:
+1: pop up for disclaimer (event handler hbs) script tags look back at lab 4 (make it a partial)
+2: Why is header not open?
+4: where are the relase notes??? 
+5: What else can I do? I initially spent a lot of time watching youtube viedos to figure out how to make a message board but now 
+6: do world editor ... button to create worlds, tag editor. (carasel card for the file editors (rendered html and pure html))
+update story changes
+
+make sure log out is not an option on the nav bar if you havent even registered yet
+-->
