file-editor work done

--- a/ProjectSourceCode/views/partials/filenav.hbs
+++ b/ProjectSourceCode/views/partials/filenav.hbs
@@ -4,13 +4,13 @@
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="/newfile">New File</a>
+            <a class="nav-link" href="/openfile">New File</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/uploadfile">Upload File</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/save">Save All</a>
+            <a class="nav-link" href="/save">Save</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/deletefile">Delete File</a>
@@ -19,7 +19,7 @@
             <a class="nav-link" href="/view">View</a>
         </li>
         <li class="nav-item" style="align-items:end;">
-            <a class="nav-link" href="/home">Exit</a>
+            <a class="nav-link" href="/users">Exit</a>
         </li>
       </ul>
     </div>
