--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -6,7 +6,7 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/myWorlds">My Worlds</a>
+          <a class="nav-link" href="/myworld">My World</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/messageBoard">Messages</a>
