--- a/ProjectSourceCode/views/pages/messages.hbs
+++ b/ProjectSourceCode/views/pages/messages.hbs
@@ -1,6 +1,10 @@
 <ul>
     {{#each messages}}
-    <li><strong>{{sender_username}}:</strong> {{message}} <em>{{timestamp}}</em></li>
+    {{#ifeq sender_username ../receiver}}
+    <li style="background-color: green;"><strong>{{sender_username}}:</strong> {{message}}</li>
+    {{else}}
+    <li style="background-color: grey;"><strong>{{sender_username}}:</strong> {{message}}</li>
+    {{/ifeq}}
     {{/each}}
 </ul>
 
