--- a/ProjectSourceCode/views/pages/myworld.hbs
+++ b/ProjectSourceCode/views/pages/myworld.hbs
@@ -33,11 +33,8 @@ button {
           </form>
         </li>
         <li class="nav-item">
-          <button type="submit" form="upload-file" class="nav-link btn-outline-light border-0 link-like">
-            Upload File
-          </button>
           <form action="/uploadfile" id="upload-file" method="POST">
-            <input class="form-control" type="file" name="file" id="file" style="display:none;">
+            <input class="form-control" type="file" name="file" id="upload-file" onchange="javascript:this.form.submit();">
           </form>
         </li>
         <li class="nav-item">
