--- a/ProjectSourceCode/views/partials/head.hbs
+++ b/ProjectSourceCode/views/partials/head.hbs
@@ -17,6 +17,56 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+  <style>
+    .profile-card {
+        margin: 10px;
+        transition: transform 0.2s;
+    }
+    .profile-card:hover {
+        transform: scale(1.05);
+    }
+    .profile-img {
+        width: 100px;
+        height: 100px;
+        background-image: url('https://static.vecteezy.com/system/resources/thumbnails/009/292/244/small/default-avatar-icon-of-social-media-user-vector.jpg');
+        background-size: cover;
+        border-radius: 50%;
+    }
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .message-container {
+        max-width: 600px;
+        margin: auto;
+    }
+    .text-message {
+        background-color: #e0f7fa;
+        border-radius: 20px;
+        padding: 10px 20px;
+        margin: 10px 0;
+        word-wrap: break-word;
+    }
+    .incoming {
+        border-bottom-left-radius: 0;
+        background-color: #bbdefb;
+        align-self: flex-start;
+    }
+    .outgoing {
+        border-bottom-right-radius: 0;
+        background-color: #c8e6c9;
+        align-self: flex-end;
+    }
+
+    .form-container {
+        max-width: 600px;
+        margin: 20px auto;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
+
 </head>
 
 <body class="h-100 d-flex flex-column">
