--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -9,7 +9,7 @@
           <a class="nav-link" href="/myWorlds">My Worlds</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/messageBoard">Messages</a>
+          <a class="nav-link" href="/users">Messages</a>
           <!-- I should find out how to make this signal if there are new messages -->
         </li>
         <li class="nav-item">
