--- a/ProjectSourceCode/views/pages/login.hbs
+++ b/ProjectSourceCode/views/pages/login.hbs
@@ -1,15 +1,21 @@
 {{> message}}
-<div class="container"></div>
-<form action="/login" method="POST">
-    <div class="form-group px-5 py-3">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" name="username">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="password">
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>test testsetsetset</h1>
+        </div>
+        <div class="col pt-5">
+            <h1>Login</h1>
+            <form action="/login" method="POST">
+                <div class="form-group py-3">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username" name="username">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>
+                <button type="submit" class="btn" style="background-color: #8AF7F8;">Login</button>
+                <p class="py-2">Don't have an account? <a href="/register" style="color:#8AF7F8;">Register</a></p>
+            </form>
+        </div>
     </div>
-    <div class="px-5">
-        <button type="submit" class="btn btn-primary">Login</button>
-        <p>Don't have an account? <a href="/register">Register</a></p>
-    </div>
-</form>
 </div>
