--- a/ProjectSourceCode/views/pages/login.hbs
+++ b/ProjectSourceCode/views/pages/login.hbs
@@ -1,4 +1,33 @@
 {{> message}}
+
+
+
+<!-- on load pop up the terms of serves data-bs-toggle="modal" data-bs-target="#staticBackdrop" 
+<body onload="data-bs-toggle="modal" data-bs-target="#staticBackdrop"">
+    
+</body>
+<head onload = "$('#staticBackdrop').show()">
+<script type="text/javascript">
+    $(window).on('load', function() {
+        $('#myModal').modal('show');
+    });
+</script> 
+
+
+<div class="modal fade in" id="myModal">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">×</a>
+        <h3>Modal header</h3>
+    </div>
+    <div class="modal-body">
+        <p>One fine body…</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn">Close</a>
+        <a href="#" class="btn btn-primary">Save changes</a>
+    </div>
+</div> -->
+
 <div class="container"></div>
     <form action="/login" method="POST">
     <div class="form-group">
@@ -11,4 +40,25 @@
     <p>Don't have an account? <a href="/register">Register</a></p>
     </form>
 </div>
-{{> footer}}
+
+<!--
+<div class="modal fade in" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Disclaimer and terms of service</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p>World View is not responcable for the protection of your intelectual property.</p>
+        </div>
+        <div class="modal-footer">
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">I understand and agree</button>  <!-- this does not submit -->
+           <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Understood</button> 
+        </div>
+        </div>
+    </div>
+</div>
+-->
+
