--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -59,7 +59,7 @@
           </form>
         </li>
         <li class="nav-item">
-          <a href="/">
+          <a href="/login">
             <button type="button" class="btn" style="background-color: #8AF7F8;">Log In</button>
           </a>
         </li>
