--- a/ProjectSourceCode/views/pages/myworld.hbs
+++ b/ProjectSourceCode/views/pages/myworld.hbs
@@ -33,8 +33,8 @@ button {
           </form>
         </li>
         <li class="nav-item">
-          <form action="/uploadfile" id="upload-file" method="POST">
-            <input class="form-control" type="file" name="file" id="upload-file" onchange="javascript:this.form.submit();">
+          <form action="/uploadfile" id="upload-file" enctype="multipart/form-data" method="POST">
+            <input class="form-control" type="file" multiple="multiple" name="file" id="upload-file" onchange="javascript:this.form.submit();">
           </form>
         </li>
         <li class="nav-item">
@@ -70,9 +70,8 @@ button {
 </header>
 {{> message}}
 <form action="/savefile" id="save-file" method="POST">
-    <input class="form-control" type="text" name="filename" value={{curr}} id="filename" style="display:none;">
+    <input class="form-control" type="text" name="filename" value={{curr}} id="filename">
     <div class="form-group">
-        <label for="editor">Editor: "{{curr}}"</label>
         <textarea class="form-control" name="file" id="editor" placeholder="Enter text here..." rows="40" cols="100">{{file}}</textarea>
     </div>
 </form>
