--- a/ProjectSourceCode/views/partials/message.hbs
+++ b/ProjectSourceCode/views/partials/message.hbs
@@ -1,5 +1,12 @@
 {{#if message}}
-  <div class="alert alert-{{#if error}}danger{{else}}success{{/if}}" role="alert">
+  <div id="m" class="alert alert-{{#if error}}danger{{else}}success{{/if}}" role="alert">
     {{ message }}
   </div>
+  <script>
+    const message = document.querySelector(`#m`);
+    console.log(`${message} exists maybe`);
+    message.addEventListener(`click`, () => {
+      message.style = `display:none;`;
+    });
+  </script>
 {{/if}}
