--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -15,6 +15,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/messageBoard">Messages</a> <!-- I should find out how to make this signal if there are new messages -->
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/discover">Discover</a>
+        </li>
       </ul>
     </div>
 
