--- a/ProjectSourceCode/views/partials/nav2.hbs
+++ b/ProjectSourceCode/views/partials/nav2.hbs
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/">Home</a> <!-- why does home send you all the way back to log in, some one might have fixed this so I wont touch for now -->
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout">Discover ALL</a>
