--- a/ProjectSourceCode/views/pages/discover.hbs
+++ b/ProjectSourceCode/views/pages/discover.hbs
@@ -1,25 +1,27 @@
-{{> message }} <!-- no idea if this is right-->
+{{> message }} 
+{{> nav2 }} <!-- Why is this overpowering the initial nav? -->
 
 <table>
     <thead>
         <tr>
-            <th>Course ID</th>
-            <th>Course Name</th>
-            <th>Credit Hours</th>
-            <th></th>
+            <th>World Name</th>
+            <th>World Creator</th>
+            <th>World Tags</th> <!-- Whatever other aspects should be displayed -->
+            <th>Visit</th>
         </tr>
     </thead>
     <tbody>
-        {{#each worlds}} <!-- rewrite for cards-->
+        {{#each worlds}} <!-- can I pile on if statments here for the tags, also where can I find this ? -->
         <tr>
-            <td>{{this.course_id}}</td>
-            <td>{{this.course_name}}</td>
-            <td>{{this.course_hours}}</td>
+            <td>{{this.world_name}}</td>
+            <td>{{this.world_owner}}</td>
+            <td>{{this.world_tags}}</td>
             <td>
-                <form method="POST" action="/courses/add">
-                    <input type="hidden" name="course_id" value="{{this.course_id}}">
-                    <button type="submit" class="{{#unless this.taken}}btn-success{{/unless}}" {{#if
-                        this.taken}}disabled{{/if}}>Add</button> <!-- rewrite for tags-->
+                <form method="GET" action="/view">
+                <!-- app.get('/view', (req, res) => {
+    res.render('world_files/index');
+}); -->
+                    <button type="submit" >Visit</button> 
                 </form>
             </td>
         </tr>
