--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -74,12 +74,11 @@
 
     <div class="navbar-collapse collapse order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <!-- I have to do more set up for this to work -->
-            {{ email }}
-          </a>
-        </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">
+                    {{ username }} 
+              </a>
+          </li>
       </ul>
     </div>
   </nav>
