--- a/ProjectSourceCode/views/pages/view.hbs
+++ b/ProjectSourceCode/views/pages/view.hbs
@@ -1,1 +1,1 @@
-<iframe src="/viewmyworld" height="100%" width="100%" title={{title}}></iframe>
+<iframe src={{src}} height="100%" width="100%" title={{title}}></iframe>
