--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -13,6 +13,10 @@
           <!-- I should find out how to make this signal if there are new messages -->
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/friends">Friends</a>
+          <!-- I should find out how to make this signal if there are new messages -->
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Random</a>
         </li>
       </ul>
