finishing up styling for pages

--- a/ProjectSourceCode/views/pages/users.hbs
+++ b/ProjectSourceCode/views/pages/users.hbs
@@ -3,7 +3,7 @@
         <div class="col">
             <ul class="list-unstyled">
                 {{#each users}}
-                    <li class="card profile-card">
+                    <li class="card profile-card" style="background-color: antiquewhite;">
                         <a href="/messages/{{username}}" class="d-flex align-items-center p-2">
                         <div class="profile-img"></div>
                         <div class="ms-3">
