--- a/ProjectSourceCode/views/partials/head.hbs
+++ b/ProjectSourceCode/views/partials/head.hbs
@@ -32,11 +32,18 @@
         background-size: cover;
         border-radius: 50%;
     }
+    .earth-img {
+      width: 600px;
+      height: 600px;
+      background-image: url('https://imgur.com/nT6nR1s.png');
+      background-size: cover;
+      border-radius: 50%;
+    }
     a {
         text-decoration: none;
         color: inherit;
     }
-
+    
     .message-container {
         max-width: 600px;
         margin: auto;
