--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -26,8 +26,8 @@
       <ul class="navbar-nav">
         <li class="nav-item pe-3">
           <form class="d-flex" role="search">
-            <button class="btn btn-dark" style="background-color: #68AB77;" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                fill="ffffff" class="bi bi-search" viewBox="0 0 16 16">
+            <button class="btn" style="background-color:#68AB77" type="submit"><svg xmlns="http://www.w3.org/2000/svg"
+                width="16" height="16" fill="#ffffff" class="bi bi-search" viewBox="0 0 16 16">
                 <path
                   d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
               </svg></button>
@@ -35,9 +35,6 @@
           </form>
         </li>
         <li class="nav-item">
-          <a class="navbar-brand" href="#">
-            <img src="..." alt="PFP" style="width:30px;" class="rounded-pill">
-          </a>
         </li>
         <li class="nav-item">
           <div class="dropstart">
@@ -54,8 +51,8 @@
       <ul class="navbar-nav">
         <li class="nav-item pe-3">
           <form class="d-flex" role="search">
-            <button class="btn" style="background-color:#68AB77" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                fill="#ffffff" class="bi bi-search" viewBox="0 0 16 16">
+            <button class="btn" style="background-color:#68AB77" type="submit"><svg xmlns="http://www.w3.org/2000/svg"
+                width="16" height="16" fill="#ffffff" class="bi bi-search" viewBox="0 0 16 16">
                 <path
                   d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
               </svg></button>
@@ -69,7 +66,7 @@
         </li>
         <li class="nav-item">
           <a href="/register" class="ps-2">
-            <button type="button" class="btn" style="background-color: #8AF7F8;">Sign Up</button>
+            <button type="button" class="btn" style="background-color: #8AF7F8;">Register</button>
           </a>
         </li>
       </ul>
@@ -78,11 +75,11 @@
 
     <div class="navbar-collapse collapse order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-              <a class="nav-link" href="#">
-                    {{ username }} 
-              </a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            {{ username }}
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
