Fixed routing for Homepage, added Homepage styling

--- a/ProjectSourceCode/views/pages/home.hbs
+++ b/ProjectSourceCode/views/pages/home.hbs
@@ -42,6 +42,7 @@
                 <div class="grid-item" onclick="javascript:this.parentNode.submit()">
                     <div class="text-container">
                         <p>{{this.username}}'s World</p>
+                        <p>{{this.filename}}</p>
                     </div>
                 </div>
             </form>
