--- a/ProjectSourceCode/views/pages/home.hbs
+++ b/ProjectSourceCode/views/pages/home.hbs
@@ -4,9 +4,6 @@
 <head>
     <title>{{title}}</title>
     <style>
-        body {
-            background-color: #bb764e;
-        }
         .grid-container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
@@ -18,16 +15,19 @@
             /* thoughtd be cute to make them circles */
             width: 150px;
             height: 150px;
-            border-radius: 100%;
+            border-radius: 50%;
+            display: flex;
+            overflow: hidden;
             padding: 20px;
             text-align: center;
         }
         .text-container {
             background-color: rgba(255, 255, 255, 0.5);
             border-radius: 10px;
-            padding: 10px;
-            display: flex;
-            align-items: center;
+            padding: 5px;
+            max-width: 100%;
+            display: block;
+            word-wrap: break-word;
         }
     </style>
 </head>
@@ -41,8 +41,8 @@
                 <input class="form-control" type="text" name="username"  value={{this.username}} style="display:none;">
                 <div class="grid-item" onclick="javascript:this.parentNode.submit()">
                     <div class="text-container">
+                        <p><strong>{{this.filename}}</strong></p>
                         <p>{{this.username}}'s World</p>
-                        <p>{{this.filename}}</p>
                     </div>
                 </div>
             </form>
