fixed user world rendering and homescreen rendering

--- a/ProjectSourceCode/views/pages/home.hbs
+++ b/ProjectSourceCode/views/pages/home.hbs
@@ -41,8 +41,8 @@
                 <input class="form-control" type="text" name="username"  value={{this.username}} style="display:none;">
                 <div class="grid-item" onclick="javascript:this.parentNode.submit()">
                     <div class="text-container">
-                        <p><strong>{{this.filename}}</strong></p>
-                        <p>{{this.username}}'s World</p>
+                        <!--<p><strong>{{this.filename}}</strong></p>-->
+                        <p><strong>{{this.username}}</strong>'s World</p>
                     </div>
                 </div>
             </form>
