fixed minor style issue with random search in nav

--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -17,7 +17,7 @@
           <!-- I should find out how to make this signal if there are new messages -->
         </li>
         <li class="nav-item">
-          <button type="submit" form="random-search" class="nav-link btn-outline-light border-0 link-like">
+          <button type="submit" form="random-search" class="nav-link btn-outline-light border-0">
               Random
           </button>
           <form action="/randomsearch" id="random-search" method="POST">
