color update for friends list

--- a/ProjectSourceCode/views/pages/friends.hbs
+++ b/ProjectSourceCode/views/pages/friends.hbs
@@ -13,7 +13,7 @@
         <div class="col">
             <ul class="list-unstyled">
                 {{#each friends}}
-                    <li class="card profile-card">
+                    <li class="card profile-card" style="background-color: antiquewhite;">
                         <a href="/view?u={{this.friend_id}}" class="d-flex align-items-center p-2">
                             <div class="profile-img"></div>
                             <div class="ms-3">
