--- a/ProjectSourceCode/views/pages/home.hbs
+++ b/ProjectSourceCode/views/pages/home.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html>
 <head>
     <title>{{title}}</title>
@@ -31,4 +31,7 @@
         {{/each}}
     </div>
 </body>
-</html>
+</html> --}}
+
+
+<h1>Hello World</h1>
