almost done tags

--- a/ProjectSourceCode/views/partials/tags.hbs
+++ b/ProjectSourceCode/views/partials/tags.hbs
@@ -7,19 +7,22 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form action = "/changeTags" id = 'changeTags' method = "POST">
+      <form action="/changeTags" id='changeTags' method="POST">
         <div class="modal-body">
-            <p>Please select the tags you would like to use</p>
-            <input type="checkbox" class="btn-check" id="game" name="game" value="false" autocomplete="off">
-            <label class="btn btn-outline-primary" for="game">Game</label><br>
-            <input type="checkbox" class="btn-check" id="html" name="html" value="false" autocomplete="off">
-            <label class="btn btn-outline-primary" for="html">HTML</label><br>
-            <input type="checkbox" class="btn-check" id="css" name="css" value="false" autocomplete="off">
-            <label class="btn btn-outline-primary" for="css">CSS</label><br>
+          {{#each tags}}
+            <p>{{this.theTags}}</p>
+          {{/each}}
+          <p>Please select the tags you would like to use</p>
+          <input type="checkbox" class="btn-check" id="game" name="game" value=0 autocomplete="off" onclick="$(this).attr('value', this.checked ? 1 : 0)">
+          <label class="btn btn-outline-primary" for="game">Game</label><br>
+          <input type="checkbox" class="btn-check" id="html" name="html" value=0 autocomplete="off" onclick="$(this).attr('value', this.checked ? 1 : 0)">
+          <label class="btn btn-outline-primary" for="html">HTML</label><br>
+          <input type="checkbox" class="btn-check" id="css" name="css" value=0 autocomplete="off" onclick="$(this).attr('value', this.checked ? 1 : 0)">
+          <label class="btn btn-outline-primary" for="css">CSS</label><br>
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Save changes</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </form>
     </div>
