--- a/ProjectSourceCode/views/pages/messages.hbs
+++ b/ProjectSourceCode/views/pages/messages.hbs
@@ -1,3 +1,4 @@
+{{> nav}}
 <div class="message-container d-flex flex-column">
     {{#each messages}}
         {{#ifeq sender_username ../receiver}}
