--- a/ProjectSourceCode/views/pages/messages.hbs
+++ b/ProjectSourceCode/views/pages/messages.hbs
@@ -1,4 +1,4 @@
-{{> nav}}
+{{> nav}} <!-- may be unessisary -->
 <div class="message-container d-flex flex-column">
     {{#each messages}}
         {{#ifeq sender_username ../receiver}}
