--- a/ProjectSourceCode/views/pages/myworld.hbs
+++ b/ProjectSourceCode/views/pages/myworld.hbs
@@ -43,6 +43,50 @@ button {
               Save
           </button>
         </li>
+        <!--  The form add-tag still needs to be made
+          <li class="nav-item">
+          
+
+
+
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Add tag (only one mosty suited)
+          </button>
+
+        </li>
+
+
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <button type="button" form="add-tag" class="nav-link btn-outline-light border-0 link-like"> Add tag HTML </button>
+                <button type="button" form="add-tag" class="nav-link btn-outline-light border-0 link-like"> Add tag CSS </button>
+                <button type="button" form="add-tag" class="nav-link btn-outline-light border-0 link-like"> Add tag Game </button>
+              </div>
+            </div>
+          </div>
+        </div>
+ 
+ 
+  -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+        </form>
+
+    </div>       
+
+         Create everything nessisary for this including a popup form that will -->
         <li class="nav-item">
           <button type="submit" form="delete-file" class="nav-link btn-outline-light border-0 link-like">
               Delete File
