--- a/ProjectSourceCode/views/partials/nav2.hbs
+++ b/ProjectSourceCode/views/partials/nav2.hbs
@@ -7,10 +7,13 @@
             <a class="nav-link" href="/discover">Discover ALL</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/HTML">HTML</a>
+            <a class="nav-link" href="/dhtml">HTML</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/CSS">CSS</a> <!-- I should find out how to make this signal if there are new messages -->
+            <a class="nav-link" href="/dcss">CSS</a> <!-- I should find out how to make this signal if there are new messages -->
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/dgame">Game</a>
         </li>
       </ul>
     </div>
