--- a/ProjectSourceCode/views/pages/myworld.hbs
+++ b/ProjectSourceCode/views/pages/myworld.hbs
@@ -62,7 +62,7 @@ button {
             <a class="nav-link" href="/view">View</a>
         </li>
         <li class="nav-item" style="align-items:end;">
-            <a class="nav-link" href="/users">Exit</a>
+            <a class="nav-link" href="/home">Exit</a>
         </li>
         <button type="button" class="nav-link btn-outline-light border-0 link-like" data-toggle="modal" data-target="#tagmodal">
           Change Tags
