--- a/ProjectSourceCode/views/pages/myworld.hbs
+++ b/ProjectSourceCode/views/pages/myworld.hbs
@@ -69,7 +69,7 @@ button {
         </button>
         <ul>
           {{#each tags}}
-              <li>{{this}}</li>
+              <li style="float:right;margin:10px">{{this}}</li>
           {{/each}}
       </ul>
       </ul>
