--- a/ProjectSourceCode/views/pages/home.hbs
+++ b/ProjectSourceCode/views/pages/home.hbs
@@ -42,7 +42,7 @@
                 <div class="grid-item" onclick="javascript:this.parentNode.submit()">
                     <div class="text-container">
                         <!--<p><strong>{{this.filename}}</strong></p>-->
-                        <p><strong>{{this.username}}</strong>'s World</p>
+                        <p style="margin:0"><strong>{{this.username}}</strong>'s World</p>
                         <ul>
                             {{#each this.tags}}
                                 <li>{{this}}</li>
