--- a/ProjectSourceCode/views/pages/home.hbs
+++ b/ProjectSourceCode/views/pages/home.hbs
@@ -42,10 +42,10 @@
                 <div class="grid-item" onclick="javascript:this.parentNode.submit()">
                     <div class="text-container">
                         <!--<p><strong>{{this.filename}}</strong></p>-->
-                        <p style="margin:0"><strong>{{this.username}}</strong>'s World</p>
+                        <p style="margin:0;font-size: 15px"><strong>{{this.username}}</strong>'s World</p>
                         <ul>
                             {{#each this.tags}}
-                                <li>{{this}}</li>
+                                <li style="margin:0.5px;font-size: 15px">{{this}}</li>
                             {{/each}}
                         </ul>
                     </div>
