--- a/ProjectSourceCode/views/pages/discover.hbs
+++ b/ProjectSourceCode/views/pages/discover.hbs
@@ -27,7 +27,7 @@
 }); 
 LOOK at home
 -->
-                    <button type="submit" >Visit</button> 
+                    <button type="submit" style="color:aqua; background-color:#68AB77">Visit</button> 
                 </form>
             </td>
         </tr>
