--- a/ProjectSourceCode/views/pages/dhtml.hbs
+++ b/ProjectSourceCode/views/pages/dhtml.hbs
@@ -1,12 +1,37 @@
-<!-- discover html I may need to write quieres for this but IDK how tags is set up yet
+{{> message }} 
+{{>nav}} <!-- perhaps make some slight adjustments here or on the head partial to always say the name World view at the top of the screen -->
+{{> nav2 }} 
 
-potentially use sql queries or the below styled if statments to handle finding only the ones of a certian tag type
-
-
- <input type="hidden" name="course_id" value="{{this.course_id}}">
-                    <button type="submit" class="{{#unless this.taken}}btn-success{{/unless}}" {{#if
-                        this.taken}}disabled{{/if}}>Add</button> 
-
+<table>
+    <thead>
+        <tr>
+            <!-- see how this style looks and possible change -->
+            <th style="color:#68AB77; background-color:aqua">World Name</th>
+            <th style="color:#68AB77; background-color:aqua">World Creator</th>
+            <th style="color:#68AB77; background-color:aqua">World Tag</th> <!-- Whatever other aspects should be displayed -->
+            <th style="color:#68AB77; background-color:aqua">Visit</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each files}} <!-- can I pile on if statments here for the tags, also where can I find this ? -->
+        <tr>
+            <td style="color:aqua; background-color:#68AB77">{{this.username}}</td>
+            <td style="color:aqua; background-color:#68AB77">{{this.filename}}</td>
+            <td style="color:aqua; background-color:#68AB77">{{this.tag}}</td>
+            <td>
+                <form action="/submitusername" method="POST">
+                <input class="form-control" type="text" name="username"  value={{this.username}} style="display:none;">
+                <!-- <div class="grid-item" onclick="javascript:this.parentNode.submit()">
+                app.get('/view', (req, res) => {
+    res.render('world_files/index');
+}); 
+LOOK at home
 -->
-
+                    <button type="submit" style="color:aqua; background-color:#68AB77">Visit</button> 
+                </form>
+            </td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 
