soon to be merged

--- a/ProjectSourceCode/views/pages/home.hbs
+++ b/ProjectSourceCode/views/pages/home.hbs
@@ -43,7 +43,7 @@
                     <div class="text-container">
                         <!--<p><strong>{{this.filename}}</strong></p>-->
                         <p><strong>{{this.username}}</strong>'s World</p>
-                        <p><strong>{{this.tag}}</strong></p> <!--Will just added the tag, possible comment out -->
+                       <!-- <p><strong>{{this.tag}}</strong></p> Will just added the tag, possible comment out -->
                     </div>
                 </div>
             </form>
