I created a discover page that works

--- a/ProjectSourceCode/views/partials/nav.hbs
+++ b/ProjectSourceCode/views/partials/nav.hbs
@@ -24,6 +24,10 @@
             <input class="form-control" type="text" id="random-search-input" style="display:none;">
           </form>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/discover">Discover</a>
+          <!-- I should find out how to make this signal if there are new messages -->
+        </li>
       </ul>
 
       {{#if username}}
