--- a/ProjectSourceCode/views/partials/head.hbs
+++ b/ProjectSourceCode/views/partials/head.hbs
@@ -7,6 +7,8 @@
   <meta name="description" content="" />
 
   <title>World View</title>
+
+  <h1 style="background-color:aqua">World View</h1>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
@@ -18,6 +20,9 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <style>
+    h1 {
+      text-align: center;
+    }
     .profile-card {
         margin: 10px;
         transition: transform 0.2s;
